--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main # Replace 'main' with your default branch name (e.g., master, develop)
 
+permissions: # <--- 在這裡加入 permissions 區塊
+  contents: read
+  pages: write
+  id-token: write # <--- 確保這行存在
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -50,5 +55,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          deploy_key: ${{ secrets.FORACTION }}
