--- a/config.toml
+++ b/config.toml
@@ -133,8 +133,8 @@ dateFormat = ":date_long"
     number_posts = 3 # To control how many posts to show under each tag section, set the value to a number. Three is the default.
     number_columns = 3 # You can specify the number of columns from 1-4 for large screen resolution. By default, the theme uses three columns grid.
 
-  [[params.tag]]
-    tag = "NBA"
+  # [[params.tag]]
+  #   tag = "NBA"
 
   # [[params.tag]]
   #   tag = "shopping"
